<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d_16"
        android:orientation="vertical">

        <TextView
            style="@style/text_14_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_enter_doctor_details" />

        <EditText
            android:id="@+id/etName"
            style="@style/edit_16_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:padding="@dimen/d_8" />

        <EditText
            android:id="@+id/etPhoneNumber"
            style="@style/edit_16_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone"
            android:padding="@dimen/d_4" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/edit_16_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/d_4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                style="@style/button_14_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cancel" />

            <View
                android:layout_width="@dimen/d_4"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/bSave"
                style="@style/button_14_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_save" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>