<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/d_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPatientDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPatientDetails"
                style="@style/edit_18_bg_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_4"
                android:hint="@string/prompt_patient_details"
                android:padding="@dimen/d_4" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTestDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etTestDate"
                style="@style/edit_18_bg_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_4"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/prompt_test_date_format"
                android:inputType="date"
                android:padding="@dimen/d_4" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bSearch"
            style="@style/button_16_primary_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:minHeight="0dp"
            android:padding="@dimen/d_4"
            android:text="@string/action_search" />

        <Button
            android:id="@+id/bBack"
            style="@style/button_16_primary_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8"
            android:minHeight="0dp"
            android:padding="@dimen/d_4"
            android:text="@string/action_back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/d_16"
        android:background="@drawable/layout_border_grey"
        android:orientation="vertical"
        android:paddingEnd="@dimen/d_8"
        android:paddingStart="@dimen/d_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTestId"
                style="@style/text_14_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/d_8"
                android:text="@string/label_no" />

            <TextView
                android:id="@+id/tvPatientName"
                style="@style/text_14_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/lightPurple"
                android:padding="@dimen/d_8"
                android:text="@string/label_patient_name_id" />

            <TextView
                android:id="@+id/tvDoB"
                style="@style/text_14_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:padding="@dimen/d_8"
                android:text="@string/label_patient_dob" />

            <TextView
                android:id="@+id/tvTestResult"
                style="@style/text_14_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/lightPurple"
                android:padding="@dimen/d_8"
                android:text="@string/label_test_result" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/text_14_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:padding="@dimen/d_8"
                android:text="@string/label_test_date" />

            <TextView
                android:id="@+id/tvTime"
                style="@style/text_14_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@color/lightPurple"
                android:padding="@dimen/d_8"
                android:text="@string/label_test_time" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_4"
            android:background="@color/colorAccent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTestList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@drawable/scroll_thumb" />

    </LinearLayout>

</LinearLayout>