<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        style="@style/text_18_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_12"
        android:text="@string/label_start_device_for_test" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_12">

        <Button
            android:id="@+id/bNewTest"
            style="@style/button_16_primary"
            android:layout_width="@dimen/d_home_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color_primary_corners"
            android:enabled="false"
            android:text="@string/action_new_test" />

        <View
            android:layout_width="@dimen/d_8"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/bViewData"
            style="@style/button_16_primary"
            android:layout_width="@dimen/d_home_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color_primary_corners"
            android:text="@string/action_view_data" />

    </LinearLayout>

    <Switch
        android:id="@+id/sHeartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_24"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_mhr"
        android:visibility="gone" />

</LinearLayout>