<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.sattvamedtech.fetallite.activity.HomeActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_128"
        android:layout_marginStart="@dimen/d_128"
        android:layout_marginTop="@dimen/d_12"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsername"
            style="@style/edit_16_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:padding="@dimen/d_8" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/edit_16_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="@dimen/d_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/action_forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/t_14"
                android:textStyle="italic" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bLogin"
                style="@style/button_16_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_8"
                android:minWidth="@dimen/d_128"
                android:paddingLeft="@dimen/d_16"
                android:paddingRight="@dimen/d_16"
                android:text="@string/action_login" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
